# deftshell

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-checker.md  test-writer.md
.claude/hooks/: check-command.sh
.claude/rules/: ai-providers.md  cli-ux.md  rust-conventions.md  security.md  shell-integration.md  testing.md
.claude/skills/add-provider/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  nightly.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  changelog.md  contributing.md  introduction.md
book/src/commands/: ai-commands.md  context-commands.md  management.md  runbook-commands.md
book/src/features/: command-intelligence.md  context-detection.md  privacy-mode.md  safety-engine.md  smart-prompt.md
book/src/getting-started/: installation.md  shell-setup.md
book/src/guides/: ai-providers.md  configuration.md  plugins.md  runbooks.md
book/src/reference/: cli-reference.md  config-reference.md  environment-vars.md
crates/ds-cli/: Cargo.toml
crates/ds-cli/src/: main.rs
crates/ds-cli/src/commands/: ask.rs  auth.rs  chat.rs  config.rs  context.rs  do_cmd.rs  doctor.rs  init.rs  mod.rs  plugin.rs  runbook.rs  stats.rs
crates/ds-cli/src/tui/: dashboard.rs  mod.rs  widgets.rs
crates/ds-cli/tests/: cli_integration.rs
crates/ds-core/: Cargo.toml
crates/ds-core/src/: lib.rs
crates/ds-core/src/ai/: context_builder.rs  gateway.rs  mod.rs  streaming.rs
crates/ds-core/src/ai/providers/: anthropic.rs  bedrock.rs  copilot.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/ds-core/src/config/: loader.rs  mod.rs  schema.rs
crates/ds-core/src/context/: cache.rs  detector.rs  mod.rs  stack_profile.rs  workspace.rs
crates/ds-core/src/intelligence/: analytics.rs  mod.rs  suggestions.rs  tracker.rs
crates/ds-core/src/plugin/: loader.rs  mod.rs  registry.rs  runtime.rs
crates/ds-core/src/runbook/: executor.rs  mod.rs  parser.rs  recorder.rs  registry.rs
crates/ds-core/src/safety/: assessor.rs  interceptor.rs  mod.rs  rules.rs
crates/ds-core/src/shell/: bash.rs  fish.rs  mod.rs  prompt.rs  zsh.rs
crates/ds-core/src/storage/: db.rs  keychain.rs  migrations.rs  mod.rs
crates/ds-core/tests/: integration.rs
crates/ds-plugin-sdk/: Cargo.toml
crates/ds-plugin-sdk/src/: types.rs
docs/: ai-providers.md  configuration.md  getting-started.md  plugins.md  runbooks.md  safety.md
docs/man/: ds.1
homebrew/: deftshell.rb
scripts/: install.sh  release.sh
shell/: deftshell.bash  deftshell.fish  deftshell.zsh
tests/fixtures/go-project/: go.mod
tests/fixtures/monorepo-turbo/: package.json
tests/fixtures/nextjs-app/: package.json  tsconfig.json
tests/fixtures/python-django/: pyproject.toml
tests/fixtures/ruby-rails/: Gemfile
tests/fixtures/rust-project/: Cargo.toml
